; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/bridge/extr_dumb-vga-dac.c_dumb_vga_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/bridge/extr_dumb-vga-dac.c_dumb_vga_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_bridge = type { i32 }
%struct.dumb_vga = type { i64 }

@.str = private unnamed_addr constant [36 x i8] c"Failed to enable vdd regulator: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_bridge*)* @dumb_vga_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dumb_vga_enable(%struct.drm_bridge* %0) #0 {
  %2 = alloca %struct.drm_bridge*, align 8
  %3 = alloca %struct.dumb_vga*, align 8
  %4 = alloca i32, align 4
  store %struct.drm_bridge* %0, %struct.drm_bridge** %2, align 8
  %5 = load %struct.drm_bridge*, %struct.drm_bridge** %2, align 8
  %6 = call %struct.dumb_vga* @drm_bridge_to_dumb_vga(%struct.drm_bridge* %5)
  store %struct.dumb_vga* %6, %struct.dumb_vga** %3, align 8
  store i32 0, i32* %4, align 4
  %7 = load %struct.dumb_vga*, %struct.dumb_vga** %3, align 8
  %8 = getelementptr inbounds %struct.dumb_vga, %struct.dumb_vga* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %1
  %12 = load %struct.dumb_vga*, %struct.dumb_vga** %3, align 8
  %13 = getelementptr inbounds %struct.dumb_vga, %struct.dumb_vga* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = call i32 @regulator_enable(i64 %14)
  store i32 %15, i32* %4, align 4
  br label %16

16:                                               ; preds = %11, %1
  %17 = load i32, i32* %4, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %16
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 %20)
  br label %22

22:                                               ; preds = %19, %16
  ret void
}

declare dso_local %struct.dumb_vga* @drm_bridge_to_dumb_vga(%struct.drm_bridge*) #1

declare dso_local i32 @regulator_enable(i64) #1

declare dso_local i32 @DRM_ERROR(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
